# time-tracker

./: .gitignore  Cargo.toml  LICENSE  README.md  REQUIREMENTS.md
src/commands/: delete_task.rs  list.rs  report.rs  stop_task.rs
src/models/: mod.rs  task.rs  time_entry.rs
task_time_tracker/: Cargo.toml
task_time_tracker/src/: lib.rs  main.rs
task_time_tracker/src/commands/: list.rs  mod.rs  report.rs  start_task.rs  stop_task.rs
task_time_tracker/src/models/: task.rs
task_time_tracker/src/persistence/: file_storage.rs
